added some css and html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
 </head>
 <body>
     <header>
-
+        <section class="navbar">
+            <div class="logo">
+                <img src="Images/Group 40071 (2).png" alt="logo">
+                <h2 class="brand">Hero <span>Travel</span></h2>
+            </div>
+            <div>
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section>
+            
+        </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
