added some css and html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero Travel</title>
     <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/161ead3cb5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="hero.css">
-</head>
-<body>
+    <script
+      src="https://kit.fontawesome.com/161ead3cb5.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="hero.css" />
+  </head>
+  <body>
     <header>
-        <section class="navbar">
-            <div class="logo">
-                <img src="Images/Group 40071 (2).png" alt="logo">
-                <h2 class="brand">Hero <span>Travel</span></h2>
-            </div>
-            <div>
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        </section>
+      <section class="navbar">
+        <div class="logo">
+          <img src="Images/Group 40071 (2).png" alt="logo" />
+          <h2 class="brand">Hero <span>Travel</span></h2>
+        </div>
+        <div>
+          <i class="fa-solid fa-bars"></i>
+        </div>
+      </section>
     </header>
     <main>
-        <section>
-            
-        </section>
+      <section>
+        <div>
+          <h2></h2>
+        </div>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
