added some css and html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,29 @@
         </div>
         <div>
           <i class="fa-solid fa-bars"></i>
+          <ul>
+            <li>Home</li>
+            <li>Package</li>
+            <li>Testimonial</li>
+            <li>Blog</li>
+            <li>Contact</li>
+          </ul>
         </div>
       </section>
     </header>
     <main>
-      <section>
-        <div>
-          <h2></h2>
+      <section class="section-one">
+        <div class="section-one-outer">
+          <div class="section-box-one">
+            <h2 class="centre-text color-2 section-title">Explore Your Travel</h2>
+            <p class="centre-text color-2 section-description">Dolor sit amet consectetur. suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+          </div>
+          <div class="section-box-two">
+              <input  class="input" type="text" placeholder="Where go">
+              <select class="input" name="" id=""> <option value="">When</option></select>
+              <select class="input" name="" id=""> <option value="">Select Type</option></select>
+              <button id="color-one" class="input color-2"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
+          </div>
         </div>
       </section>
     </main>
