--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div>
           <i class="fa-solid fa-bars"></i>
-          <ul>
+          <ul class="nav-item">
             <li>Home</li>
             <li>Package</li>
             <li>Testimonial</li>
@@ -43,6 +43,24 @@
               <select class="input" name="" id=""> <option value="">Select Type</option></select>
               <button id="color-one" class="input color-2"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
           </div>
+        </div>
+      </section>
+      <section class="section-two">
+        <div class="section-two-box-one">
+          <h3 class="section-two-title" >Our Popular Tours</h3>
+          <p class="color-3 section-two-description">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+          <div class="section-two-list">
+            <ul>
+              <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at</li>
+              <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+              <li>Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+            </ul>
+          </div>
+          <p class="color-4 section-two-description"> Amet consectetur. Vulputate commodo felis molestie risus ornare amet et. Libero commodo sagittis dignissim quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt</p>
+          <button class="btn-two">Read More</button>
+        </div>
+        <div class="section-two-box-two">
+          <img class="section-two-box-two" src="Images/Rectangle 4.png" alt="Hill">
         </div>
       </section>
     </main>
