--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           />
         </div>
       </section>
+      <section>
+        
+      </section>
     </main>
     <footer></footer>
   </body>
