--- a/index.html
+++ b/index.html
@@ -97,16 +97,19 @@
       <section>
         <div class="section-three-box-one">
           <h3 class="section-title centre-text">Choose Your Destination</h3>
-          <p class="section-description color-3 centre-text">Sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+          <p class="section-description color-3 centre-text">
+            Sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+            sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
         </div>
         <div class="section-three-box-two">
-          <img src="Images/Rectangle 5.png" alt="Maldives">
-          <img src="Images/Rectangle 8.png" alt="Indonesia">
-          <img src="Images/Rectangle 6.png" alt="Srilanka">
-          <img src="Images/Rectangle 7.png" alt="North America">
-          <img src="Images/Rectangle 9.png" alt="Kashmir">
-          <img src="Images/Rectangle 11.png" alt="Bangladesh">
-          <img src="Images/Rectangle 11.png" alt="Bandarban">
+          <img src="Images/Rectangle 5.png" alt="Maldives" />
+          <img src="Images/Rectangle 8.png" alt="Indonesia" />
+          <img src="Images/Rectangle 6.png" alt="Srilanka" />
+          <img src="Images/Rectangle 7.png" alt="North America" />
+          <img src="Images/Rectangle 9.png" alt="Kashmir" />
+          <img src="Images/Rectangle 11.png" alt="Bangladesh" />
+          <img src="Images/Rectangle 11.png" alt="Bandarban" />
         </div>
       </section>
     </main>
