added html and css code

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           />
         </div>
       </section>
-      <section>
+      <section class="section-three">
         <div class="section-three-box-one">
           <h3 class="section-title centre-text">Choose Your Destination</h3>
           <p class="section-description color-3 centre-text">
@@ -103,13 +103,40 @@
           </p>
         </div>
         <div class="section-three-box-two">
-          <img src="Images/Rectangle 5.png" alt="Maldives" />
-          <img src="Images/Rectangle 8.png" alt="Indonesia" />
-          <img src="Images/Rectangle 6.png" alt="Srilanka" />
-          <img src="Images/Rectangle 7.png" alt="North America" />
-          <img src="Images/Rectangle 9.png" alt="Kashmir" />
-          <img src="Images/Rectangle 11.png" alt="Bangladesh" />
-          <img src="Images/Rectangle 11.png" alt="Bandarban" />
+          <div class="row-one">
+            <div class="country-card">
+              <img src="Images/Rectangle 5.png" alt="Maldives" />
+              <p>Maldives</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 8.png" alt="Indonesia" />
+              <p>Indonesia</p>
+            </div>
+          </div>
+          <div class="row-two">
+            <div class="country-card">
+              <img src="Images/Rectangle 6.png" alt="Srilanka" />
+              <p>Srilanka</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 7.png" alt="North America" />
+              <p>North America</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 9.png" alt="Kashmir" />
+              <p>Kashmir</p>
+            </div>
+          </div>
+          <div class="row-three">
+            <div class="country-card">
+              <img src="Images/Rectangle 11.png" alt="Bangladesh" />
+              <p>Bangladesh</p>
+            </div>
+            <div class="country-card">
+              <img src="Images/Rectangle 11.png" alt="Bandarban" />
+              <p>Bandarban</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
