--- a/index.html
+++ b/index.html
@@ -139,6 +139,48 @@
           </div>
         </div>
       </section>
+      <section class="section-four">
+        <div class="section-four-box-one">
+          <h3 class="section-title centre-text">Why Choose Us</h3>
+          <p class="section-description centre-text color-3">
+            Sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+            sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="section-four-outer-one">
+          <div class="section-four-inner">
+            <i class="fa-solid fa-hotel"></i>
+            <h3>Handpicked Hotels</h3>
+            <p class="section-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+        <div class="section-four-outer-two">
+          <div class="section-four-inner">
+            <i class="fa-solid fa-map"></i>
+            <h3>World Class Service</h3>
+            <p class="section-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+        <div class="section-four-outer-three">
+          <div class="section-four-inner">
+            <i class="fa-solid fa-tag"></i>
+            <h3>Best Price Gaurantee</h3>
+            <p class="section-description">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
