--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
       </section>
       <section class="section-four">
         <div class="section-three-box-one">
-          <h3 class="section-title why-choose centre-text">Why Choose Us</h3>
-          <p class="section-description why-choose-des centre-text color-3">
+          <h3 class="section-title centre-text">Why Choose Us</h3>
+          <p class="section-description centre-text color-3">
             Sit amet consectetur. Diam volutpat neque habitasse pharetra odio
             sit massa. Sodales dictumst nec nibh pellentesque.
           </p>
@@ -181,6 +181,15 @@
               </p>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-five">
+        <div class="section-three-box-one">
+          <h3 class="section-title centre-text">Deal & Discounts</h3>
+          <p class="section-description color-3 centre-text">
+            Sit amet consectetur. Diam volutpat neque habitasse pharetra odio
+            sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
         </div>
       </section>
     </main>
