section five html and css codes

--- a/index.html
+++ b/index.html
@@ -191,6 +191,23 @@
             sit massa. Sodales dictumst nec nibh pellentesque.
           </p>
         </div>
+        <div class="hotel-one">
+          <div class="hotel-poster">
+            <div class="inner-poster">
+              <div>
+                <p><i class="fa-solid fa-clock"></i>7 Day/6 Night</p>
+                <div>
+                  <p><i class="fa-solid fa-user"></i>Max:10</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                </div>
+              </div>
+              <h3>Tour To Satorini</h3>
+              <p class="color-4">Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <p class="color-4">Price: $1300-$1500</p>
+              <button class="btn-three">Book Now</button>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
