section five html and css codes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
                 </div>
               </div>
               <h3>Tour To Satorini</h3>
-              <p class="color-4">Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <p class="color-4">
+                Amet consectetur. Vulputate commodo felis molestie risus .
+              </p>
               <p class="color-4">Price: $1300-$1500</p>
               <button class="btn-three">Book Now</button>
             </div>
