section five html and css codes

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <section class="section-five">
         <div class="section-three-box-one">
           <h3 class="section-title centre-text">Deal & Discounts</h3>
-          <p class="section-description color-3 centre-text">
+          <p class="color-3 centre-text">
             Sit amet consectetur. Diam volutpat neque habitasse pharetra odio
             sit massa. Sodales dictumst nec nibh pellentesque.
           </p>
@@ -194,11 +194,68 @@
         <div class="hotel-one">
           <div class="hotel-poster">
             <div class="inner-poster">
-              <div>
-                <p><i class="fa-solid fa-clock"></i>7 Day/6 Night</p>
+              <div id="hotel-description">
+                <p class="hotel-description">
+                  <i class="fa-solid fa-clock"></i> 7 Day/6 Night
+                </p>
                 <div>
-                  <p><i class="fa-solid fa-user"></i>Max:10</p>
-                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-user"> </i>Max:10
+                  </p>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-location-dot"> </i> Malaysia
+                  </p>
+                </div>
+              </div>
+              <h3>Tour To Satorini</h3>
+              <p class="color-4">
+                Amet consectetur. Vulputate commodo felis molestie risus .
+              </p>
+              <p class="color-4">Price: $1300-$1500</p>
+              <button class="btn-three">Book Now</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="hotel-two">
+          <div class="hotel-poster">
+            <div class="inner-poster">
+              <div id="hotel-description">
+                <p class="hotel-description">
+                  <i class="fa-solid fa-clock"></i> 7 Day/6 Night
+                </p>
+                <div>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-user"> </i>Max:10
+                  </p>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-location-dot"> </i> Malaysia
+                  </p>
+                </div>
+              </div>
+              <h3>Tour To Satorini</h3>
+              <p class="color-4">
+                Amet consectetur. Vulputate commodo felis molestie risus .
+              </p>
+              <p class="color-4">Price: $1300-$1500</p>
+              <button class="btn-three">Book Now</button>
+            </div>
+          </div>
+        </div>
+        <div class="hotel-three">
+          <div class="hotel-poster">
+            <div class="inner-poster">
+              <div id="hotel-description">
+                <p class="hotel-description">
+                  <i class="fa-solid fa-clock"></i> 7 Day/6 Night
+                </p>
+                <div>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-user"> </i>Max:10
+                  </p>
+                  <p class="hotel-description">
+                    <i class="fa-solid fa-location-dot"> </i> Malaysia
+                  </p>
                 </div>
               </div>
               <h3>Tour To Satorini</h3>
