section five html and css codes

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
             </div>
           </div>
         </div>
+        <div class="btn"><button class="btn-four">See All Packages</button></div>
       </section>
     </main>
     <footer></footer>
